@@ -279,21 +279,19 @@
   (:arguments (conn PGconn) (query c-string)))
 (def-call-out PQexecParams (:return-type PGresult)
   (:arguments (conn PGconn) (command c-string) (nParams int)
-              (paramTypes (c-ptr (c-array-max Oid #.MAX-PARAM)) :out :alloca)
-              (paramValues (c-ptr (c-array-max c-string #.MAX-PARAM))
-                           :out :alloca)
-              (paramLengths (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
-              (paramFormats (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
+              (paramTypes (c-array-max Oid #.MAX-PARAM))
+              (paramValues (c-array-max c-string #.MAX-PARAM))
+              (paramLengths (c-array-max int #.MAX-PARAM))
+              (paramFormats (c-array-max int #.MAX-PARAM))
               (resultFormat int)))
 (def-call-out PQprepare (:return-type PGresult)
   (:arguments (conn PGconn) (stmtName c-string) (query c-string) (nParams int)
-              (paramTypes (c-ptr (c-array-max Oid #.MAX-PARAM)) :out :alloca)))
+              (paramTypes (c-array-max Oid #.MAX-PARAM))))
 (def-call-out PQexecPrepared (:return-type PGresult)
   (:arguments (conn PGconn) (stmtName c-string) (nParams int)
-              (paramValues (c-ptr (c-array-max c-string #.MAX-PARAM))
-                           :out :alloca)
-              (paramLengths (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
-              (paramFormats (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
+              (paramValues (c-array-max c-string #.MAX-PARAM))
+              (paramLengths (c-array-max int #.MAX-PARAM))
+              (paramFormats (c-array-max int #.MAX-PARAM))
               (resultFormat int)))
 
 ;; Interface for multiple-result or asynchronous queries
@@ -301,21 +299,19 @@
   (:arguments (conn PGconn) (query c-string)))
 (def-call-out PQsendQueryParams (:return-type int)
   (:arguments (conn PGconn) (command c-string) (nParams int)
-              (paramTypes (c-ptr (c-array-max Oid #.MAX-PARAM)) :out :alloca)
-              (paramValues (c-ptr (c-array-max c-string #.MAX-PARAM))
-                           :out :alloca)
-              (paramLengths (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
-              (paramFormats (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
+              (paramTypes (c-array-max Oid #.MAX-PARAM))
+              (paramValues (c-array-max c-string #.MAX-PARAM))
+              (paramLengths (c-array-max int #.MAX-PARAM))
+              (paramFormats (c-array-max int #.MAX-PARAM))
               (resultFormat int)))
 (def-call-out PQsendPrepare (:return-type int)
   (:arguments (conn PGconn) (stmtName c-string) (query c-string) (nParams int)
-              (paramTypes (c-ptr (c-array-max Oid #.MAX-PARAM)) :out :alloca)))
+              (paramTypes (c-array-max Oid #.MAX-PARAM))))
 (def-call-out PQsendQueryPrepared (:return-type int)
   (:arguments (conn PGconn) (stmtName c-string) (nParams int)
-              (paramValues (c-ptr (c-array-max c-string #.MAX-PARAM))
-                           :out :alloca)
-              (paramLengths (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
-              (paramFormats (c-ptr (c-array-max int #.MAX-PARAM)) :out :alloca)
+              (paramValues (c-array-max c-string #.MAX-PARAM))
+              (paramLengths (c-array-max int #.MAX-PARAM))
+              (paramFormats (c-array-max int #.MAX-PARAM))
               (resultFormat int)))
 (def-call-out PQgetResult (:return-type PGresult) (:arguments (conn PGconn)))
 
@@ -359,7 +355,7 @@
 (def-call-out PQfn (:return-type PGresult)
   (:arguments (conn PGconn) (fnid int) (result_buf (c-ptr int) :out)
               (result_len (c-ptr int) :out) (result_is_int int)
-              (args (c-ptr (c-array-max PQArgBlock #.MAX-PARAM)) :out :alloca)
+              (args (c-array-max PQArgBlock #.MAX-PARAM))
               (nargs int)))
 
 ;; Accessor functions for PGresult objects
